--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
-name = "json-collection2"
+name = "json-collection"
 version = "0.1.0"
 authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
+derive-getters = "0.0"
+serde = "1.0"
+serde_derive = "1.0"
