--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rs-json-collection"
+name = "json-collection"
 version = "0.1.0"
 authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
 
@@ -10,5 +10,5 @@ serde = "1.0"
 serde_derive = "1.0"
 
 [lib]
-name = "rs-json-collection"
+name = "json_collection"
 path = "src/lib.rs"
