Fix more mistakes

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
 before_script:
   - docker-compose -f docker-compose.lint-test.yml build
 script:
-  - docker-compose -f docker-compose.lint-test.yml run lint
+  - docker-compose -f docker-compose.lint-test.yml run lint-test
 branches:
   only:
     - develop
